fix(search-pro): fix search icon on ios, close #2879

--- a/packages/search-pro/src/client/styles/search-modal.scss
+++ b/packages/search-pro/src/client/styles/search-modal.scss
@@ -126,6 +126,9 @@
 
     font-size: 1.25rem;
     line-height: 2.5;
+
+    -webkit-appearance: none;
+    appearance: none;
   }
 
   .close-button {
